fix text truncate in sidebox conversation name (#2067)
* fix text truncate in sidebox conversation name

* make the settings component fetch the headings and subheadings from external sources

--- a/css/app/mck-sidebox-1.0.css
+++ b/css/app/mck-sidebox-1.0.css
@@ -5085,7 +5085,8 @@ margin-top: 243px;
 }
 .mck-name-status-container .mck-tab-title-w-status, .mck-name-status-container .mck-tab-title-w-typing {
 	line-height: 22px;
-    height: auto;
+	height: auto;
+	width:148px;
 }
 #mck-conversation-back-btn, .mck-close-sidebox {
 	border-radius: 6px;
